feat: 替换部分文本为 i18n 展示

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -68,6 +68,69 @@
       "checkout": "Checkout",
       "settings": "Einstellungen"
     },
+    "clone": {
+      "prompt": "Repository-URL zum Klonen eingeben",
+      "placeholder": "https://github.com/user/repo.git",
+      "urlRequired": "Repository-URL ist erforderlich",
+      "selectFolder": "Klonziel auswählen",
+      "progress": "Repository wird geklont...",
+      "success": "Repository erfolgreich geklont",
+      "openFolderAction": "Ordner öffnen"
+    },
+    "advancedOperations": {
+      "pull": {
+        "noRemoteBranches": "Keine entfernten Branches gefunden.",
+        "mergeLabel": "Merge",
+        "mergeDescription": "Pull per Merge",
+        "rebaseLabel": "Rebase",
+        "rebaseDescription": "Pull per Rebase",
+        "methodPlaceholder": "Pull-Strategie wählen (Merge oder Rebase)",
+        "methodPlaceholderWithHistory": "Pull-Strategie wählen (zuletzt: {0})",
+        "suggestionsSeparator": "Vorschläge",
+        "remoteSeparator": "Entfernte Branches",
+        "upstreamLabel": "Upstream: {0}",
+        "upstreamDescription": "Upstream des aktuellen Branches",
+        "upstreamDescriptionWithBranch": "Upstream des aktuellen Branches {0}",
+        "remoteDescription": "Entfernter Branch",
+        "selectBranchPlaceholder": "Entfernten Branch für Pull auswählen ({0})",
+        "progressMerge": "Pull von {0}...",
+        "progressRebase": "Pull mit Rebase von {0}...",
+        "resultMerge": "Pull abgeschlossen: {0}",
+        "resultRebase": "Pull mit Rebase abgeschlossen: {0}"
+      },
+      "push": {
+        "placeholder": "Entfernten Branch wählen oder neuen Namen eingeben",
+        "existingDescription": "Vorhandener entfernter Branch",
+        "createLabel": "Erstellen: {0}",
+        "createDescription": "Neuen entfernten Branch erstellen",
+        "createDetail": "Der Branch wird vor dem Push erstellt",
+        "pushOptionsPlaceholder": "Push-Option wählen",
+        "pushNormalLabel": "Normaler Push",
+        "pushForceLabel": "Force-Push (--force)",
+        "forceConfirm": "Ein Force-Push kann entfernte Änderungen überschreiben und Datenverlust verursachen. Fortfahren?",
+        "forceConfirmYes": "Ja, Force-Push",
+        "forceConfirmCancel": "Abbrechen",
+        "progressNormal": "Push zu {0}{1}...",
+        "progressForce": "Force-Push zu {0}{1}...",
+        "progressNewBranchSuffix": " (neuer Branch)",
+        "successNormal": "Erfolgreich gepusht zu {0}{1}",
+        "successForce": "Force-Push erfolgreich zu {0}{1}",
+        "successNewBranchSuffix": " (neuer Branch erstellt)"
+      },
+      "checkout": {
+        "createOption": "+ Neuen Branch erstellen",
+        "placeholder": "Branch zum Checkout wählen oder neuen erstellen",
+        "inputPrompt": "Neuen Branch-Namen eingeben",
+        "inputPlaceholder": "new-branch-name",
+        "inputRequired": "Branch-Name ist erforderlich",
+        "inputExists": "Branch-Name existiert bereits",
+        "inputInvalid": "Ungültiger Branch-Name. Nur Buchstaben, Zahlen, Punkte, Bindestriche, Unterstriche und Schrägstriche.",
+        "progressCreate": "Branch {0} wird erstellt und ausgecheckt...",
+        "progressCheckout": "Branch {0} wird ausgecheckt...",
+        "successCreate": "Branch erstellt und ausgecheckt: {0}",
+        "successCheckout": "Branch ausgecheckt: {0}"
+      }
+    },
     "errors": {
       "noWorkspace": "Kein Arbeitsbereichsordner gefunden",
       "noLocalFile": "Bitte wähle eine lokale Datei, um den Verlauf anzuzeigen",
