--- a/i18n/en.json
+++ b/i18n/en.json
@@ -68,6 +68,69 @@
       "checkout": "Checkout",
       "settings": "Settings"
     },
+    "clone": {
+      "prompt": "Enter repository URL to clone",
+      "placeholder": "https://github.com/user/repo.git",
+      "urlRequired": "Repository URL is required",
+      "selectFolder": "Select Clone Location",
+      "progress": "Cloning repository...",
+      "success": "Repository cloned successfully",
+      "openFolderAction": "Open Folder"
+    },
+    "advancedOperations": {
+      "pull": {
+        "noRemoteBranches": "No remote branches found.",
+        "mergeLabel": "Merge",
+        "mergeDescription": "Pull using merge",
+        "rebaseLabel": "Rebase",
+        "rebaseDescription": "Pull using rebase",
+        "methodPlaceholder": "Select a pull strategy (Merge or Rebase)",
+        "methodPlaceholderWithHistory": "Select a pull strategy (last used: {0})",
+        "suggestionsSeparator": "Suggestions",
+        "remoteSeparator": "Remote branches",
+        "upstreamLabel": "Upstream: {0}",
+        "upstreamDescription": "Upstream of current branch",
+        "upstreamDescriptionWithBranch": "Upstream of current branch {0}",
+        "remoteDescription": "Remote branch",
+        "selectBranchPlaceholder": "Select a remote branch to pull ({0})",
+        "progressMerge": "Pulling {0}...",
+        "progressRebase": "Pulling with rebase {0}...",
+        "resultMerge": "Pulled {0}",
+        "resultRebase": "Pulled with rebase {0}"
+      },
+      "push": {
+        "placeholder": "Select a remote branch or type to create a new one",
+        "existingDescription": "Existing remote branch",
+        "createLabel": "Create: {0}",
+        "createDescription": "Create new remote branch",
+        "createDetail": "A new remote branch will be created before pushing",
+        "pushOptionsPlaceholder": "Select push option",
+        "pushNormalLabel": "Normal push",
+        "pushForceLabel": "Force push (--force)",
+        "forceConfirm": "Force push can overwrite remote changes and may cause data loss. Are you sure?",
+        "forceConfirmYes": "Yes, force push",
+        "forceConfirmCancel": "Cancel",
+        "progressNormal": "Pushing to {0}{1}...",
+        "progressForce": "Force pushing to {0}{1}...",
+        "progressNewBranchSuffix": " (new branch)",
+        "successNormal": "Successfully pushed to {0}{1}",
+        "successForce": "Successfully force pushed to {0}{1}",
+        "successNewBranchSuffix": " (new branch created)"
+      },
+      "checkout": {
+        "createOption": "+ Create new branch",
+        "placeholder": "Select a branch to checkout or create a new one",
+        "inputPrompt": "Enter new branch name",
+        "inputPlaceholder": "new-branch-name",
+        "inputRequired": "Branch name is required",
+        "inputExists": "Branch name already exists",
+        "inputInvalid": "Invalid branch name. Use only letters, numbers, dots, hyphens, underscores, and slashes.",
+        "progressCreate": "Creating and checking out branch {0}...",
+        "progressCheckout": "Checking out branch {0}...",
+        "successCreate": "Successfully created and checked out branch: {0}",
+        "successCheckout": "Successfully checked out branch: {0}"
+      }
+    },
     "errors": {
       "noWorkspace": "No workspace folder found",
       "noLocalFile": "Please select a local file to view history",
