--- a/i18n/es.json
+++ b/i18n/es.json
@@ -68,6 +68,69 @@
       "checkout": "Checkout",
       "settings": "Configuración"
     },
+    "clone": {
+      "prompt": "Introduce la URL del repositorio a clonar",
+      "placeholder": "https://github.com/user/repo.git",
+      "urlRequired": "La URL del repositorio es obligatoria",
+      "selectFolder": "Seleccionar ubicación de clonación",
+      "progress": "Clonando repositorio...",
+      "success": "Repositorio clonado correctamente",
+      "openFolderAction": "Abrir carpeta"
+    },
+    "advancedOperations": {
+      "pull": {
+        "noRemoteBranches": "No se encontraron ramas remotas.",
+        "mergeLabel": "Merge",
+        "mergeDescription": "Obtener usando merge",
+        "rebaseLabel": "Rebase",
+        "rebaseDescription": "Obtener usando rebase",
+        "methodPlaceholder": "Selecciona una estrategia de pull (Merge o Rebase)",
+        "methodPlaceholderWithHistory": "Selecciona una estrategia de pull (última usada: {0})",
+        "suggestionsSeparator": "Sugerencias",
+        "remoteSeparator": "Ramas remotas",
+        "upstreamLabel": "Upstream: {0}",
+        "upstreamDescription": "Upstream de la rama actual",
+        "upstreamDescriptionWithBranch": "Upstream de la rama actual {0}",
+        "remoteDescription": "Rama remota",
+        "selectBranchPlaceholder": "Selecciona una rama remota para hacer pull ({0})",
+        "progressMerge": "Haciendo pull de {0}...",
+        "progressRebase": "Haciendo pull con rebase de {0}...",
+        "resultMerge": "Pull completado: {0}",
+        "resultRebase": "Pull con rebase completado: {0}"
+      },
+      "push": {
+        "placeholder": "Selecciona una rama remota o escribe para crear una nueva",
+        "existingDescription": "Rama remota existente",
+        "createLabel": "Crear: {0}",
+        "createDescription": "Crear nueva rama remota",
+        "createDetail": "La rama remota se creará antes del push",
+        "pushOptionsPlaceholder": "Selecciona una opción de push",
+        "pushNormalLabel": "Push normal",
+        "pushForceLabel": "Push forzado (--force)",
+        "forceConfirm": "El push forzado puede sobrescribir cambios remotos y causar pérdida de datos. ¿Continuar?",
+        "forceConfirmYes": "Sí, push forzado",
+        "forceConfirmCancel": "Cancelar",
+        "progressNormal": "Haciendo push a {0}{1}...",
+        "progressForce": "Forzando push a {0}{1}...",
+        "progressNewBranchSuffix": " (nueva rama)",
+        "successNormal": "Push correcto a {0}{1}",
+        "successForce": "Push forzado correcto a {0}{1}",
+        "successNewBranchSuffix": " (nueva rama creada)"
+      },
+      "checkout": {
+        "createOption": "+ Crear nueva rama",
+        "placeholder": "Selecciona una rama para hacer checkout o crea una nueva",
+        "inputPrompt": "Introduce el nombre de la nueva rama",
+        "inputPlaceholder": "new-branch-name",
+        "inputRequired": "El nombre de la rama es obligatorio",
+        "inputExists": "La rama ya existe",
+        "inputInvalid": "Nombre de rama no válido. Usa solo letras, números, puntos, guiones, guiones bajos y barras.",
+        "progressCreate": "Creando y cambiando a la rama {0}...",
+        "progressCheckout": "Cambiando a la rama {0}...",
+        "successCreate": "Rama creada y seleccionada: {0}",
+        "successCheckout": "Cambio correcto a la rama: {0}"
+      }
+    },
     "errors": {
       "noWorkspace": "No se encontró ninguna carpeta de área de trabajo",
       "noLocalFile": "Selecciona un archivo local para ver su historial",
