--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -68,6 +68,69 @@
       "checkout": "Checkout",
       "settings": "Paramètres"
     },
+    "clone": {
+      "prompt": "Entrez l'URL du dépôt à cloner",
+      "placeholder": "https://github.com/user/repo.git",
+      "urlRequired": "L'URL du dépôt est requise",
+      "selectFolder": "Choisir l'emplacement de clonage",
+      "progress": "Clonage du dépôt...",
+      "success": "Dépôt cloné avec succès",
+      "openFolderAction": "Ouvrir le dossier"
+    },
+    "advancedOperations": {
+      "pull": {
+        "noRemoteBranches": "Aucune branche distante trouvée.",
+        "mergeLabel": "Merge",
+        "mergeDescription": "Récupérer avec merge",
+        "rebaseLabel": "Rebase",
+        "rebaseDescription": "Récupérer avec rebase",
+        "methodPlaceholder": "Choisissez une stratégie de pull (Merge ou Rebase)",
+        "methodPlaceholderWithHistory": "Choisissez une stratégie de pull (dernier choix : {0})",
+        "suggestionsSeparator": "Suggestions",
+        "remoteSeparator": "Branches distantes",
+        "upstreamLabel": "Upstream : {0}",
+        "upstreamDescription": "Upstream de la branche actuelle",
+        "upstreamDescriptionWithBranch": "Upstream de la branche actuelle {0}",
+        "remoteDescription": "Branche distante",
+        "selectBranchPlaceholder": "Sélectionnez une branche distante à récupérer ({0})",
+        "progressMerge": "Récupération de {0}...",
+        "progressRebase": "Récupération avec rebase de {0}...",
+        "resultMerge": "Pull effectué : {0}",
+        "resultRebase": "Pull avec rebase effectué : {0}"
+      },
+      "push": {
+        "placeholder": "Sélectionnez une branche distante ou saisissez-en une nouvelle",
+        "existingDescription": "Branche distante existante",
+        "createLabel": "Créer : {0}",
+        "createDescription": "Créer une nouvelle branche distante",
+        "createDetail": "La branche distante sera créée avant le push",
+        "pushOptionsPlaceholder": "Choisissez une option de push",
+        "pushNormalLabel": "Push normal",
+        "pushForceLabel": "Push forcé (--force)",
+        "forceConfirm": "Un push forcé peut écraser les changements distants et provoquer une perte de données. Continuer ?",
+        "forceConfirmYes": "Oui, push forcé",
+        "forceConfirmCancel": "Annuler",
+        "progressNormal": "Push vers {0}{1}...",
+        "progressForce": "Push forcé vers {0}{1}...",
+        "progressNewBranchSuffix": " (nouvelle branche)",
+        "successNormal": "Push réussi vers {0}{1}",
+        "successForce": "Push forcé réussi vers {0}{1}",
+        "successNewBranchSuffix": " (nouvelle branche créée)"
+      },
+      "checkout": {
+        "createOption": "+ Créer une nouvelle branche",
+        "placeholder": "Sélectionnez une branche à checkout ou créez-en une nouvelle",
+        "inputPrompt": "Entrez le nom de la nouvelle branche",
+        "inputPlaceholder": "new-branch-name",
+        "inputRequired": "Le nom de la branche est requis",
+        "inputExists": "Cette branche existe déjà",
+        "inputInvalid": "Nom de branche invalide. Utilisez uniquement lettres, chiffres, points, tirets, underscores et slashs.",
+        "progressCreate": "Création et checkout de la branche {0}...",
+        "progressCheckout": "Checkout de la branche {0}...",
+        "successCreate": "Branche créée et sélectionnée : {0}",
+        "successCheckout": "Branche sélectionnée : {0}"
+      }
+    },
     "errors": {
       "noWorkspace": "Aucun dossier d'espace de travail trouvé",
       "noLocalFile": "Veuillez sélectionner un fichier local pour afficher l'historique",
