--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -68,6 +68,69 @@
       "checkout": "Checkout",
       "settings": "Settings"
     },
+    "clone": {
+      "prompt": "クローンするリポジトリの URL を入力してください",
+      "placeholder": "https://github.com/user/repo.git",
+      "urlRequired": "リポジトリの URL は必須です",
+      "selectFolder": "クローン先を選択",
+      "progress": "リポジトリをクローンしています...",
+      "success": "リポジトリをクローンしました",
+      "openFolderAction": "フォルダーを開く"
+    },
+    "advancedOperations": {
+      "pull": {
+        "noRemoteBranches": "リモート ブランチが見つかりませんでした。",
+        "mergeLabel": "Merge",
+        "mergeDescription": "Merge で取得",
+        "rebaseLabel": "Rebase",
+        "rebaseDescription": "Rebase で取得",
+        "methodPlaceholder": "Pull 方法を選択 (Merge / Rebase)",
+        "methodPlaceholderWithHistory": "Pull 方法を選択 (前回: {0})",
+        "suggestionsSeparator": "提案",
+        "remoteSeparator": "リモート ブランチ",
+        "upstreamLabel": "上流: {0}",
+        "upstreamDescription": "現在のブランチの上流",
+        "upstreamDescriptionWithBranch": "現在のブランチ {0} の上流",
+        "remoteDescription": "リモート ブランチ",
+        "selectBranchPlaceholder": "Pull するリモート ブランチを選択 ({0})",
+        "progressMerge": "{0} を取得中...",
+        "progressRebase": "Rebase で {0} を取得中...",
+        "resultMerge": "Pull 完了: {0}",
+        "resultRebase": "Rebase Pull 完了: {0}"
+      },
+      "push": {
+        "placeholder": "リモート ブランチを選択、または新規作成名を入力",
+        "existingDescription": "既存のリモート ブランチ",
+        "createLabel": "作成: {0}",
+        "createDescription": "新しいリモート ブランチを作成",
+        "createDetail": "Push 前にリモート ブランチを作成します",
+        "pushOptionsPlaceholder": "Push オプションを選択",
+        "pushNormalLabel": "通常の Push",
+        "pushForceLabel": "強制 Push (--force)",
+        "forceConfirm": "強制 Push はリモートの変更を上書きし、データ損失を引き起こす可能性があります。続行しますか？",
+        "forceConfirmYes": "はい、強制 Push",
+        "forceConfirmCancel": "キャンセル",
+        "progressNormal": "{0}{1} に Push 中...",
+        "progressForce": "{0}{1} に強制 Push 中...",
+        "progressNewBranchSuffix": " (新しいブランチ)",
+        "successNormal": "{0}{1} への Push に成功しました",
+        "successForce": "{0}{1} への強制 Push に成功しました",
+        "successNewBranchSuffix": " (新しいブランチを作成)"
+      },
+      "checkout": {
+        "createOption": "+ 新しいブランチを作成",
+        "placeholder": "チェックアウトするブランチを選択、または新規作成",
+        "inputPrompt": "新しいブランチ名を入力",
+        "inputPlaceholder": "new-branch-name",
+        "inputRequired": "ブランチ名は必須です",
+        "inputExists": "ブランチ名は既に存在します",
+        "inputInvalid": "無効なブランチ名です。英数字、ドット、ハイフン、アンダー スコア、スラッシュのみ使用できます。",
+        "progressCreate": "ブランチ {0} を作成してチェックアウト中...",
+        "progressCheckout": "ブランチ {0} をチェックアウト中...",
+        "successCreate": "ブランチを作成してチェックアウトしました: {0}",
+        "successCheckout": "ブランチをチェックアウトしました: {0}"
+      }
+    },
     "errors": {
       "noWorkspace": "ワークスペースフォルダーが見つかりません",
       "noLocalFile": "履歴を表示するローカル ファイルを選択してください",
