--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -68,6 +68,69 @@
       "checkout": "Checkout",
       "settings": "Настройки"
     },
+    "clone": {
+      "prompt": "Введите URL репозитория для клонирования",
+      "placeholder": "https://github.com/user/repo.git",
+      "urlRequired": "Необходимо указать URL репозитория",
+      "selectFolder": "Выберите папку для клонирования",
+      "progress": "Клонирование репозитория...",
+      "success": "Репозиторий успешно клонирован",
+      "openFolderAction": "Открыть папку"
+    },
+    "advancedOperations": {
+      "pull": {
+        "noRemoteBranches": "Удалённые ветки не найдены.",
+        "mergeLabel": "Merge",
+        "mergeDescription": "Выполнить pull через merge",
+        "rebaseLabel": "Rebase",
+        "rebaseDescription": "Выполнить pull через rebase",
+        "methodPlaceholder": "Выберите стратегию pull (Merge или Rebase)",
+        "methodPlaceholderWithHistory": "Выберите стратегию pull (последняя: {0})",
+        "suggestionsSeparator": "Предложения",
+        "remoteSeparator": "Удалённые ветки",
+        "upstreamLabel": "Upstream: {0}",
+        "upstreamDescription": "Upstream текущей ветки",
+        "upstreamDescriptionWithBranch": "Upstream текущей ветки {0}",
+        "remoteDescription": "Удалённая ветка",
+        "selectBranchPlaceholder": "Выберите удалённую ветку для pull ({0})",
+        "progressMerge": "Выполняется pull {0}...",
+        "progressRebase": "Выполняется pull с rebase {0}...",
+        "resultMerge": "Pull выполнен: {0}",
+        "resultRebase": "Pull с rebase выполнен: {0}"
+      },
+      "push": {
+        "placeholder": "Выберите удалённую ветку или введите имя новой",
+        "existingDescription": "Существующая удалённая ветка",
+        "createLabel": "Создать: {0}",
+        "createDescription": "Создать новую удалённую ветку",
+        "createDetail": "Ветка будет создана перед push",
+        "pushOptionsPlaceholder": "Выберите способ push",
+        "pushNormalLabel": "Обычный push",
+        "pushForceLabel": "Force push (--force)",
+        "forceConfirm": "Force push может перезаписать удалённые изменения и привести к потере данных. Продолжить?",
+        "forceConfirmYes": "Да, выполнить force push",
+        "forceConfirmCancel": "Отмена",
+        "progressNormal": "Выполняется push в {0}{1}...",
+        "progressForce": "Выполняется force push в {0}{1}...",
+        "progressNewBranchSuffix": " (новая ветка)",
+        "successNormal": "Успешно выполнен push в {0}{1}",
+        "successForce": "Успешно выполнен force push в {0}{1}",
+        "successNewBranchSuffix": " (создана новая ветка)"
+      },
+      "checkout": {
+        "createOption": "+ Создать новую ветку",
+        "placeholder": "Выберите ветку для checkout или создайте новую",
+        "inputPrompt": "Введите имя новой ветки",
+        "inputPlaceholder": "new-branch-name",
+        "inputRequired": "Имя ветки обязательно",
+        "inputExists": "Такая ветка уже существует",
+        "inputInvalid": "Недопустимое имя ветки. Используйте только буквы, цифры, точки, дефисы, подчёркивания и слэши.",
+        "progressCreate": "Создание и checkout ветки {0}...",
+        "progressCheckout": "Checkout ветки {0}...",
+        "successCreate": "Ветка создана и выбрана: {0}",
+        "successCheckout": "Ветка выбрана: {0}"
+      }
+    },
     "errors": {
       "noWorkspace": "Папка рабочей области не найдена",
       "noLocalFile": "Выберите локальный файл, чтобы просмотреть историю",
