--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -68,6 +68,69 @@
       "checkout": "签出",
       "settings": "设置"
     },
+    "clone": {
+      "prompt": "输入要克隆的仓库地址",
+      "placeholder": "https://github.com/user/repo.git",
+      "urlRequired": "仓库地址不能为空",
+      "selectFolder": "选择克隆位置",
+      "progress": "正在克隆仓库...",
+      "success": "仓库克隆成功",
+      "openFolderAction": "打开文件夹"
+    },
+    "advancedOperations": {
+      "pull": {
+        "noRemoteBranches": "未发现任何远程分支。",
+        "mergeLabel": "合并 (Merge)",
+        "mergeDescription": "使用合并拉取",
+        "rebaseLabel": "变基 (Rebase)",
+        "rebaseDescription": "使用变基拉取",
+        "methodPlaceholder": "选择拉取方式（Merge 或 Rebase）",
+        "methodPlaceholderWithHistory": "选择拉取方式（上次使用：{0}）",
+        "suggestionsSeparator": "建议",
+        "remoteSeparator": "远程分支",
+        "upstreamLabel": "上游：{0}",
+        "upstreamDescription": "当前分支的上游",
+        "upstreamDescriptionWithBranch": "当前分支 {0} 的上游",
+        "remoteDescription": "远程分支",
+        "selectBranchPlaceholder": "选择要拉取的远程分支（{0}）",
+        "progressMerge": "正在拉取 {0}...",
+        "progressRebase": "正在使用 rebase 拉取 {0}...",
+        "resultMerge": "已拉取：{0}",
+        "resultRebase": "已使用 rebase 拉取：{0}"
+      },
+      "push": {
+        "placeholder": "选择远程分支或输入以创建新分支",
+        "existingDescription": "已有远程分支",
+        "createLabel": "创建：{0}",
+        "createDescription": "创建新的远程分支",
+        "createDetail": "推送前将自动创建该远程分支",
+        "pushOptionsPlaceholder": "选择推送方式",
+        "pushNormalLabel": "普通推送",
+        "pushForceLabel": "强制推送 (--force)",
+        "forceConfirm": "强制推送可能覆盖远程更改并造成数据丢失，确定继续吗？",
+        "forceConfirmYes": "是，强制推送",
+        "forceConfirmCancel": "取消",
+        "progressNormal": "正在推送到 {0}{1}...",
+        "progressForce": "正在强制推送到 {0}{1}...",
+        "progressNewBranchSuffix": "（新分支）",
+        "successNormal": "已成功推送到 {0}{1}",
+        "successForce": "已成功强制推送到 {0}{1}",
+        "successNewBranchSuffix": "（已创建新分支）"
+      },
+      "checkout": {
+        "createOption": "+ 创建新分支",
+        "placeholder": "选择一个分支签出或创建新分支",
+        "inputPrompt": "输入新分支名称",
+        "inputPlaceholder": "new-branch-name",
+        "inputRequired": "分支名称不能为空",
+        "inputExists": "分支名称已存在",
+        "inputInvalid": "分支名称不合法，只能包含字母、数字、点、连字符、下划线和斜杠",
+        "progressCreate": "正在创建并签出分支 {0}...",
+        "progressCheckout": "正在签出分支 {0}...",
+        "successCreate": "已创建并签出分支：{0}",
+        "successCheckout": "已签出分支：{0}"
+      }
+    },
     "errors": {
       "noWorkspace": "未找到工作区文件夹",
       "noLocalFile": "请选择一个本地文件来查看历史",
